# so_many_words

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
data/: aggregate.py  aggregate_phonemes.py  aggregate_sentences.py  download_dictionary.py  missing_phonemes.py  testy.txt
src/: bin_build_phoneme.rs  bin_count_dictionary.rs  bin_detect.rs  bin_eudex.rs  bin_generate_empty_dictionary.rs  bin_search_phoneme.rs  bin_stem.rs  bin_tokenize.rs  lang.rs  lib.rs  regress_sentences.rs  stemmer.rs
src/ar/: mod.rs
src/da/: stemmer.rs
src/en/: grammar.rs  mod.rs  stemmer.rs  tensor.rs  tokens.rs  vocabulary.rs
src/nl/: stemmer.rs
tests/: grammar.rs  token.rs  use.rs  vocab.rs  word_usage.rs
