[package]
name = "so_many_words"
version = "0.1.3"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT OR Apache-2.0"
description = "Not Linear Programming"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/so_many_words"
documentation = "https://docs.rs/so_many_words/"
keywords = ["natural","language","processing","nlp"]

[dependencies]
radix_trie = "0.2.0"
bitflags = "1.2.1"
regex = "1"

[[bin]]
name = "regress_sentences"
path = "src/regress_sentences.rs"

[[bin]]
name = "generate_empty_dictionary"
path = "src/bin_generate_empty_dictionary.rs"

[[bin]]
name = "tokenize"
path = "src/bin_tokenize.rs"
