[package]
name = "so_many_words"
version = "0.1.12"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT OR Apache-2.0"
description = "Not Linear Programming"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/so_many_words"
documentation = "https://docs.rs/so_many_words/"
keywords = ["natural","language","processing","nlp"]

[dependencies]
radix_trie = "0.2.0"
bitflags = "1.2.1"
regex = "1"
rust-stemmers = "1.2"
whatlang = "0.9.0"
eudex = "0.1.1"
memmap = "0.7"

[dependencies.fst]
version = "0.4"
features = ["levenshtein"]

[[bin]]
name = "eudex"
path = "src/bin_eudex.rs"

[[bin]]
name = "tokenize"
path = "src/bin_tokenize.rs"

[[bin]]
name = "stem"
path = "src/bin_stem.rs"

[[bin]]
name = "detect"
path = "src/bin_detect.rs"

[[bin]]
name = "build_phoneme"
path = "src/bin_build_phoneme.rs"

[[bin]]
name = "search_phoneme"
path = "src/bin_search_phoneme.rs"

[[bin]]
name = "regress_sentences"
path = "src/regress_sentences.rs"

[[bin]]
name = "generate_empty_dictionary"
path = "src/bin_generate_empty_dictionary.rs"

[[bin]]
name = "count_dictionary"
path = "src/bin_count_dictionary.rs"


